--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,9 +2,9 @@
 
 <!-- start custom head snippets -->
 
-<link rel="apple-touch-icon" sizes="180x180" href="{{ base_path }}/images/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon/android-chrome-192x192.png" sizes="192x192">
+<link rel="apple-touch-icon" sizes="180x180" href="../..//images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" href="../..//images/favicon/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="../..//images/favicon/android-chrome-192x192.png" sizes="192x192">
 <link rel="icon" type="image/png" href="../../images/favicon/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="{{ base_path }}/images/manifest.json?v=M44lzPylqQ">
 <link rel="mask-icon" href="{{ base_path }}/images/safari-pinned-tab.svg?v=M44lzPylqQ" color="#000000">
