--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -70,21 +70,23 @@ $info-color                 : #fe8801;
 /* brands */
 $behance-color              : #1769FF;
 $dribbble-color             : #ea4c89;
-$facebook-color             : #3b5998;
+// $facebook-color             : #3b5998;
+$facebook-color             : #171516;
 $flickr-color               : #ff0084;
 $foursquare-color           : #0072b1;
 $github-color               : #171516;
 $google-plus-color          : #dd4b39;
 $instagram-color            : #517fa4;
 $lastfm-color               : #d51007;
-$linkedin-color             : #007bb6;
+// $linkedin-color             : #007bb6;
+$linkedin-color             : #171516;
 $pinterest-color            : #cb2027;
 $rss-color                  : #fa9b39;
 $soundcloud-color           : #ff3300;
 $stackoverflow-color        : #fe7a15;
 $tumblr-color               : #32506d;
 // $twitter-color              : #55acee;
-$twitter-color              : #000000;
+$twitter-color              : #171516;
 $vimeo-color                : #1ab7ea;
 $vine-color                 : #00bf8f;
 $youtube-color              : #bb0000;
@@ -93,7 +95,8 @@ $xing-color                 : #006567;
 
 /* links */
 $link-color                 : $info-color;
-$link-color-hover           : mix(#000, $link-color, 25%);
+// $link-color-hover           : mix(#000, $link-color, 25%);
+$link-color-hover           : $link-color;
 $link-color-visited         : mix(#fff, $link-color, 25%);
 $masthead-link-color        : $primary-color;
 $masthead-link-color-hover  : mix(#000, $primary-color, 25%);
