--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -64,7 +64,6 @@ $primary-color              : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-// $info-color                 : #52adc8;
 $info-color                 : #fe8801;
 
 /* brands */
@@ -78,14 +77,12 @@ $github-color               : #171516;
 $google-plus-color          : #dd4b39;
 $instagram-color            : #517fa4;
 $lastfm-color               : #d51007;
-// $linkedin-color             : #007bb6;
 $linkedin-color             : #171516;
 $pinterest-color            : #cb2027;
 $rss-color                  : #fa9b39;
 $soundcloud-color           : #ff3300;
 $stackoverflow-color        : #fe7a15;
 $tumblr-color               : #32506d;
-// $twitter-color              : #55acee;
 $twitter-color              : #171516;
 $vimeo-color                : #1ab7ea;
 $vine-color                 : #00bf8f;
@@ -95,11 +92,10 @@ $xing-color                 : #006567;
 
 /* links */
 $link-color                 : $info-color;
-// $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-hover           : $link-color;
 $link-color-visited         : mix(#fff, $link-color, 25%);
 $masthead-link-color        : $primary-color;
-$masthead-link-color-hover  : mix(#000, $primary-color, 25%);
+$masthead-link-color-hover  : $link-color;
 
 
 /*
