--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -89,6 +89,10 @@ $vine-color                 : #00bf8f;
 $youtube-color              : #bb0000;
 $xing-color                 : #006567;
 
+/* gradient colors */
+$gd1: #fe515d;
+$gd2: #f78f62;
+
 
 /* links */
 $link-color                 : $info-color;
