--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -84,11 +84,15 @@
 
   img {
     max-width: 175px;
+
+    background: linear-gradient(#fff, #fff) padding-box,
+              linear-gradient(45deg, #fe515d, #f78f62) border-box;
+    border: 4px solid transparent;
     border-radius: 50%;
 
     @include breakpoint($large) {
       padding: 5px;
-      border: 1px solid $border-color;
+      //border: 1px solid $border-color;
     }
   }
 }
