updated talks pages

--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -38,7 +38,7 @@
     {% if post.date %}<p class="page__meta">{{ post.date | date: '%B %d, %Y' }}</p>{% endif %}
     {% if post.venue %}<p itemprop="description"> <strong>Venue:</strong> {{ post.venue }}</p> {% endif %}
     {% if post.location %}<p itemprop="description">  <strong>Location:</strong> {{ post.location }}</p> {% endif %}
-    {% if post.type %}<p itemprop="description">  <strong>Tags:</strong> <span style="background-color: black;padding: 3px;border-radius: 5px;color: white;font-size: 12px;">{{post.type}}</span></p> {% endif %}
+    {% if post.type %}<p itemprop="description">  <strong>Tags:</strong> <span style="background: linear-gradient(111.3deg, #fe515d 9.6%, #f78f62 93.6%);padding: 3px;border-radius: 5px;color: white;font-size: 12px;">{{post.type}}</span></p> {% endif %}
     
     <!-- {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>{% endif %} -->
   </article>
