--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -46,7 +46,7 @@ layout: default
         {% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
-      {% if page.type %} Tags: <span style="background-color: black;color:white;padding:5px;border-radius:6px;font-size: 13px;">{{page.type}}</span> {% endif %}
+      {% if page.type %} Tags: <span style="background: linear-gradient(111.3deg, #fe515d 9.6%, #f78f62 93.6%);color:white;padding:5px;border-radius:6px;font-size: 13px;">{{page.type}}</span> {% endif %}
 
       <footer class="page__meta">
         {% if site.data.ui-text[site.locale].meta_label %}
