--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -17,7 +17,7 @@
   a {
     //text-decoration: underline;
 
-    @include gradient(to bottom right, $list1);
+    @include gradient(left, $list1);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
